# collaberr-backend-mvp

./: .dockerignore  .editorconfig  .gitignore  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-image-main.yml  docker-image-staging.yml
core/: conftest.py
core/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
core/accounts/test/: test_rest_api.py
core/accounts/test/fixtures/: accounts.py
core/accounts/tests/: test_rest_api.py
core/api/accounts/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
core/api/authentications/: apps.py  models.py  serializers.py  urls.py  views.py
core/api/businesses/: apps.py  models.py
core/api/campaigns/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/api/campaigns/models/: __init__.py  (+2 more)
core/api/creators/: apps.py  models.py  serializers.py  urls.py  views.py
core/api/youtube_analytics/: apps.py  urls.py
core/apps/accounts/: managers.py  models.py  serializers.py  urls.py  views.py
core/apps/authentications/: apps.py  models.py  urls.py  views.py
core/apps/business/: apps.py  models.py  urls.py  views.py
core/apps/businesses/: apps.py  models.py
core/apps/campaign/: apps.py  forms.py  models.py  urls.py  views.py
core/apps/campaigns/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
core/apps/creator/: apps.py  models.py  urls.py  views.py
core/apps/creators/: apps.py  models.py
core/apps/home/: urls.py  views.py
core/apps/user/: apps.py  forms.py  models.py  urls.py  views.py
core/campaigns/: admin.py  apps.py  urls.py  views.py
core/data/scripts/: youtube_analytics.py
core/general/: authentication.py  authentications.py  constants.py  models.py  permissions.py  validator.py  validators.py
core/general/utils/: collections.py  misc.py  settings.py
core/plugins/aws/: s3.py
core/plugins/youtube/: test_conn.py  youtube_analytics.py  youtube_reports.py
core/plugins/youtube_analytics/: bulk.py  import_data_from_s3.py  query.py  report.py  test.py  test_conn.py  test_download.py  test_upload.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/templates/business/: business_dashboard.html  business_details.html
core/templates/campaign/: campaign_create.html  campaign_details.html  campaign_home.html
core/templates/creator/: creator_home.html
core/templates/home/: base.html  head.html  home.html  login.html
core/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
scripts/: entrypoint.sh
(+58 files in other folders)
