[tool.poetry]
name = "collaberr-backend"
version = "0.1.0"
description = ""
authors = ["Tony Lee <43350428+TonysHub@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
django-filter = "^23.1"
flake8 = "^6.0.0"
django-split-settings = "^1.2.0"
pillow = "^9.5.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
